--- a/ass_Q1.html
+++ b/ass_Q1.html
@@ -3,7 +3,8 @@
 <title>MY first HTML page</title>
 </head>
 <body>
-<h1>Name: Shrija lal Father's Name:Ajay kumar Mother's name: Anju rani</h1>
-<h2>branch:cse core <br> section:CSE 27 </h2>
-<p>ravindrapuri durgakund <br> Varanasi <br> uttarpredesh <br> INDIA</p>
+<h1 style="color: crimson;text-align: center;">Name: Shrija lal <br>Father's Name:Ajay kumar <br> Mother's name: Anju rani</h1>
+<hr>
+<h2 style="text-align: center;">branch:cse core <br> section:CSE 27 </h2>
+<p><b>address: </b>ravindrapuri durgakund  Varanasi  uttarpredesh </p>
 </body>
